--- a/acceleration-speed/Makefile.in
+++ b/acceleration-speed/Makefile.in
@@ -354,7 +354,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = -I../libde265
+AM_CPPFLAGS = -I$(top_srcdir)/libde265 -I$(top_srcdir)
 acceleration_speed_DEPENDENCIES = ../libde265/libde265.la
 acceleration_speed_CXXFLAGS = 
 acceleration_speed_LDFLAGS = 
