--- a/dec265/Makefile.in
+++ b/dec265/Makefile.in
@@ -357,7 +357,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = -I../libde265
+AM_CPPFLAGS = -I$(top_srcdir)/libde265 -I$(top_srcdir)
 dec265_DEPENDENCIES = ../libde265/libde265.la
 dec265_CXXFLAGS = $(am__append_1) $(am__append_3)
 dec265_LDFLAGS = $(am__append_2) $(am__append_4) $(am__append_6)
