--- a/libde265/encoder/algo/Makefile.in
+++ b/libde265/encoder/algo/Makefile.in
@@ -360,7 +360,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = libde265_encoder_algo.la
-libde265_encoder_algo_la_CXXFLAGS = -I../..
+libde265_encoder_algo_la_CXXFLAGS = -I$(top_srcdir) -I$(top_builddir)
 libde265_encoder_algo_la_SOURCES = \
   algo.h algo.cc \
   coding-options.h coding-options.cc \
