--- a/libde265/x86/Makefile.in
+++ b/libde265/x86/Makefile.in
@@ -356,13 +356,14 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LTLIBRARIES = libde265_x86.la  libde265_x86_sse.la
-libde265_x86_la_CXXFLAGS = -I.. $(CFLAG_VISIBILITY) $(am__append_1)
+libde265_x86_la_CXXFLAGS = -I$(top_srcdir)/libde265 \
+	$(CFLAG_VISIBILITY) $(am__append_1)
 libde265_x86_la_SOURCES = sse.cc sse.h
 libde265_x86_la_LIBADD = libde265_x86_sse.la
 
 # SSE4 specific functions
-libde265_x86_sse_la_CXXFLAGS = -msse4.1 -I.. $(CFLAG_VISIBILITY) \
-	$(am__append_2)
+libde265_x86_sse_la_CXXFLAGS = -msse4.1 -I$(top_srcdir) \
+	-I$(top_srcdir)/libde265 $(CFLAG_VISIBILITY) $(am__append_2)
 libde265_x86_sse_la_SOURCES = sse-motion.cc sse-motion.h sse-dct.h sse-dct.cc
 EXTRA_DIST = \
   CMakeLists.txt
