--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -363,7 +363,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = -I../libde265
+AM_CPPFLAGS = -I$(top_srcdir)/libde265 -I$(top_srcdir)
 gen_enc_table_DEPENDENCIES = ../libde265/libde265.la
 gen_enc_table_CXXFLAGS = 
 gen_enc_table_LDFLAGS = 
