--- a/libde265/x86/Makefile.in
+++ b/libde265/x86/Makefile.in
@@ -258,6 +258,7 @@ LIBDE265_CURRENT = @LIBDE265_CURRENT@
 LIBDE265_REVISION = @LIBDE265_REVISION@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
+LIBS_PRIVATE = @LIBS_PRIVATE@
 LIBTOOL = @LIBTOOL@
 LIPO = @LIPO@
 LN_S = @LN_S@
