--- a/configure.ac
+++ b/configure.ac
@@ -2,11 +2,11 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.68])
-AC_INIT([libde265], [1.0.15], [dirk.farin@gmail.com])
+AC_INIT([libde265], [1.0.16], [dirk.farin@gmail.com])
 AC_CONFIG_SRCDIR([libde265/de265.cc])
 AC_CONFIG_HEADERS([config.h])
 
-NUMERIC_VERSION=0x01001500 # Numeric representation of the version (A.B.C[.D] = 0xAABBCCDD)
+NUMERIC_VERSION=0x01001600 # Numeric representation of the version (A.B.C[.D] = 0xAABBCCDD)
 AC_SUBST(NUMERIC_VERSION)
 
 # From https://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html:
@@ -16,7 +16,7 @@ AC_SUBST(NUMERIC_VERSION)
 # If any interfaces have been removed or changed since the last public release, then set age to 0.
 
 LIBDE265_CURRENT=1
-LIBDE265_REVISION=8
+LIBDE265_REVISION=9
 LIBDE265_AGE=1
 
 # ---------------------------------------------------------------------------
@@ -103,6 +103,9 @@ AC_FUNC_ERROR_AT_LINE
 # AC_FUNC_MALLOC
 # AC_FUNC_REALLOC
 AC_FUNC_MKTIME
+
+LIBS_PRIVATE="$LIBS -lstdc++"
+AC_SUBST(LIBS_PRIVATE)
 
 AM_CONDITIONAL(MINGW, expr $host : '.*-mingw' >/dev/null 2>&1)
 
@@ -385,6 +388,6 @@ AC_CONFIG_FILES([dec265/Makefile])
 AC_CONFIG_FILES([enc265/Makefile])
 AC_CONFIG_FILES([sherlock265/Makefile])
 AC_CONFIG_FILES([tools/Makefile])
-AC_CONFIG_FILES([acceleration-speed/Makefile])
+# AC_CONFIG_FILES([acceleration-speed/Makefile])
 AC_CONFIG_FILES([libde265.pc])
 AC_OUTPUT
